[package]
name = "graph-breaker"
version = "0.1.0"
authors = ["Vadim Rutkovsky <vrutkovs@redhat.com>"]
edition = "2018"

[dependencies]
github-rs = "0.7"
serde_json = "1.0"
actix = "^0.9"
actix-web = "^2.0"
anyhow = "1.0"
thiserror = "1.0"
smart-default = "^0.5.2"
structopt = "^0.2.10"
serde = "^1.0.70"
serde_derive = "^1.0.70"
log = "^0.4.6"
toml = "^0.4.10"
url = "^1.7.2"
lazy_static = "^1.2.0"
