[package]
name = "graph-breaker"
version = "0.1.0"
authors = ["Vadim Rutkovsky <vrutkovs@redhat.com>"]
edition = "2018"

[dependencies]
hubcaps = "^0.6"
serde_json = "^1.0"
actix = "^0.9"
actix-web = "^2.0"
anyhow = "^1.0"
thiserror = "^1.0"
smart-default = "^0.5.2"
structopt = "^0.2.10"
serde = "^1.0.70"
serde_derive = "^1.0.70"
log = "^0.4.6"
toml = "^0.4.10"
url = "^1.7.2"
lazy_static = "^1.2.0"
git2 = "^0.13"
tempfile = "^3.1.0"
env_logger = "^0.6.0"
dirs = "^3.0.1"
serde_yaml = "^0.8"
rand = "^0.7.3"
actix-web-httpauth = "^0.4.2"
actix-rt = "^1.0"
actix-web-prom = "^0.2"
futures = "0.3"

[dev-dependencies]
actix-service = "1.0.5"

[patch.crates-io]
hubcaps = { git = "https://github.com/vrutkovs/hubcaps", rev="713bc40997f9086a07b7cc67fe6d0f94f769f88a" }
